--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
         Hire Me</a>
         </div>
         <div class="half-width">
-        <img src="../developer-portfolio/my-bg (1).png" alt="">
+        <img src="img/my-bg (1).png" alt="">
         </div>
     </section>
     <section class="dream-area">
         <div class="half-width">
-            <img src="../developer-portfolio/my-bg2.png" alt="">
+            <img src="img/i.png" alt="">
         </div>
         <div class="half-width" id="pa">
             <h2>Dream Big</h2>
